fix(cart, product): update API and UI for cart and procduct
